added custom properties

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="body-container">
-        <header></header>
+        <header>
+            <h1>Myri Timer</h1>
+        </header>
         <main>
             <section class="timer-img-container">
                 <div class="timer-img-top"><img src="./public/img/avo/avo-top.svg"></div>
