added font and buttons

--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
         </header>
         <main>
             <section class="timer-img-container">
-                <div class="timer-img-top"><img src="./public/img/avo/avo-top.svg"></div>
+                <div class="timer-img-top"><img src="./public/img/avo/avo-top.svg" alt=""></div>
                 <div class="timer-img-mid">
-                    <div class="timer-img-mid-left"><img src="./public/img/avo/avo-mid-left.svg"></div>
-                    <div class="timer-img-mid-mid"><img src="./public/img/avo/avo-mid-mid.svg"></div>
-                    <div class="timer-img-mid-right"><img src="./public/img/avo/avo-mid-right.svg"></div>
+                    <div class="timer-img-mid-left"><img src="./public/img/avo/avo-mid-left.svg" alt=""></div>
+                    <div class="timer-img-mid-mid">
+                        <div class="timer-display">00:00</div>
+                    </div>
+                    <div class="timer-img-mid-right"><img src="./public/img/avo/avo-mid-right.svg" alt=""></div>
                 </div> <!-- /timer-img-mid -->
-                <div class="timer-img-bottom"><img src="./public/img/avo/avo-bottom.svg"></div>
+                <div class="timer-img-bottom"><img src="./public/img/avo/avo-bottom.svg" alt=""></div>
             </section> <!-- /timer-img-container -->
+            <section class="timer-control-container">
+                <button class="timer-start"><span class="material-symbols-outlined">play_arrow</span></button>
+                <button class="timer-reset"><span class="material-symbols-outlined">restart_alt</span></button>
+            </section><!-- /timer-control -->
         </main>
         <footer></footer>
     </div> <!-- /body-container -->
