--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="body-container">
         <header>
-            <h1>Myri Timer</h1>
+            <h1>&nbsp;Myri<span class="material-symbols-outlined heading-icon">timer</span>Timer&nbsp;</h1>
         </header>
         <main>
             <section class="timer-img-container">
