added interval buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
                 </div> <!-- /timer-img-mid -->
                 <div class="timer-img-bottom"><img src="./public/img/avo/avo-bottom.svg" alt=""></div>
             </section> <!-- /timer-img-container -->
+            
+            <div class="timer-interval-header">
+                <div class="interval-header-content">
+                    <h2>Select a time interval:</h2>
+                    <p>We encourage intervals to be no longer than 60 minutes to maximize productivity.</p>
+                </div>
+            </div>
+            <section class="timer-setting-container">    
+                <div class="invalid-input">Invalid time!</div>
+                <div class="timer-interval-container">
+                    <div class="timer-interval">
+                        <button class="interval-btn">10 mins</button>
+                    </div>
+                    <div class="timer-interval">
+                        <button class="interval-btn">25 mins</button>
+                    </div>
+                    <div class="timer-interval">
+                        <button class="interval-btn">30 mins</button>
+                    </div>
+                    <div class="timer-interval">
+                        <button class="interval-btn">50 mins</button>
+                    </div>
+                    <div class="interval-custom"><input type="number" class="min-input" maxlength="2" min="1" max="60"> mins</div>
+                </div>                
+            </section>
             <section class="timer-control-container">
                 <button class="timer-start"><span class="material-symbols-outlined">play_arrow</span></button>
                 <button class="timer-reset"><span class="material-symbols-outlined">restart_alt</span></button>
