--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="timer-interval-header">
                 <div class="interval-header-content">
                     <h2>Select a time interval:</h2>
-                    <p>We encourage intervals to be no longer than 60 minutes to maximize productivity.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt voluptas hic, odio exercitationem tenetur voluptates ducimus magnam officia nihil quae labore alias minus. Maxime illum, voluptatum nemo impedit reprehenderit veniam?</p>
                 </div>
             </div>
             <section class="timer-setting-container">    
