test git on laptop

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <div class="timer-interval">
                         <button class="interval-btn">50 mins</button>
                     </div>
+                    <!-- test git on laptop -->
                     <div class="interval-custom"><input type="number" class="min-input" maxlength="2" min="1" max="60"> mins</div>
                 </div>                
             </section>
